# CppJify

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  conanfile.txt
cmake/: CppJifyHelper.cmake  Install.cmake
cmake/checker/: clang-tidy.cmake
cmake/dependencies/: FindAndLinkDeps.cmake
cmake/install/: Config.cmake.in  CppJifyHelper.cmake  CppJifyInstall.cmake  Install.cmake
demo/: CMakeLists.txt  CppJifyDemo.cpp  delme.cpp
demo/basics/: CMakeLists.txt  SimpleDatatypes.cpp
include/: CMakeLists.txt
include/cppJify/: CMakeLists.txt  CppJify.hpp  CppJifyConstants.hpp
include/cppJify/blueprints/: CMakeLists.txt  JavaBlueprints.hpp  JniBlueprints.hpp  Placeholder.hpp
include/cppJify/composer/: CMakeLists.txt  IComposer.hpp  JComposer.hpp  JniComposer.hpp
include/cppJify/generator/: CMakeLists.txt  Generator.hpp  JavaGenerator.hpp  JniGenerator.hpp  Placeholder.hpp
include/cppJify/generator/blueprints/: CMakeLists.txt  JavaBlueprints.hpp  JniBlueprints.hpp
include/cppJify/helper/: CMakeLists.txt  Helper.hpp
include/cppJify/jbinder/: CMakeLists.txt  JavaBinder.hpp
include/cppJify/mapper/: BaseMapper.hpp  BasicMapper.hpp  CMakeLists.txt  JifyDefaultMapper.hpp  JifyMapper.hpp
include/cppJify/mapper/classes/: CMakeLists.txt  InstanceClassMapper.hpp  StaticClassMapper.hpp
include/cppJify/mapper/primitives/: BoolMapper.hpp  CMakeLists.txt  CharMapper.hpp  DoubleMapper.hpp  FloatMapper.hpp  IntMapper.hpp  LongMapper.hpp  ShortMapper.hpp  StringMapper.hpp  VoidMapper.hpp
include/cppJify/mapper/smart_ptrs/: CMakeLists.txt  SharedPtrMapper.hpp  UniquePtrMapper.hpp
include/cppJify/mapper/type_modifiers/: CMakeLists.txt  MappedObjectRefMapper.hpp  PtrTypeMapper.hpp  RefTypeMapper.hpp
include/cppJify/utils/: CMakeLists.txt  FilesystemUtils.hpp  MacroUtils.hpp  StringUtils.hpp
install/windows-debug/cmake/: CppJifyConfig.cmake  CppJifyTargets-debug.cmake  CppJifyTargets.cmake
install/windows-debug/lib/: CppJify.lib
src/cppJify/: CMakeLists.txt  CppJify.cpp
src/cppJify/composer/: CMakeLists.txt  JniComposer.cpp
src/cppJify/jbinder/: CMakeLists.txt  JavaBinder.cpp
src/cppJify/mapper/: CMakeLists.txt
src/cppJify/mapper/classes/: CMakeLists.txt  StaticClassMapper.cpp
src/cppJify/utils/: CMakeLists.txt  FilesystemUtils.cpp  StringUtils.cpp
